<?xml version="1.0"?>
<package format="2">
  <name>dualarm_mobile_rbp</name>
  <version>0.0.0</version>
  <description>The epos_tutorial package</description>
  <maintainer email="jeon@todo.todo">jeon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
